GCCI/bin/Debug/log.txt
C:\test.c: In function 'main':
C:\test.c:5:2: error: expected ';' before 'system'
  system("pause");
  ^
